idk i replaced all '' with ""

--- a/src/partials/_featured.scss
+++ b/src/partials/_featured.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     background-color: rgba(18, 18, 26,1);
 
     h2 {
