--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -9,7 +9,7 @@
     background-size: cover; 
     background-position: top;
 
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
 
     @media (max-width: 767px) {
         justify-content: end;
