--- a/src/partials/_navigation.scss
+++ b/src/partials/_navigation.scss
@@ -8,7 +8,7 @@
     height: 56px;
     transition-duration: .5s;
 
-    font-family: 'Source Code Pro', monospace;   
+    font-family: "Source Code Pro", monospace;   
   }
   
   .navbarActive {
@@ -21,11 +21,11 @@
     height: 56px;
     transition-duration: .5s;
 
-    font-family: 'Source Code Pro', monospace;   
+    font-family: "Source Code Pro", monospace;   
   }
 
   .siteName {
-    font-family: 'Playfair Display', serif;
+    font-family: "Playfair Display", serif;
   }
 
   .navLinks {
@@ -43,7 +43,7 @@
   
 .wordmark {
   color: rgba(255,255,255,0.1); 
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
   font-size: 24vw;
 
