--- a/src/partials/_post.scss
+++ b/src/partials/_post.scss
@@ -8,7 +8,7 @@
     background-position: center;
     background-size: cover;
 
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     text-shadow: 0 3px 5px rgba(0,0,0,0.5);
 
     h2 {
