--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
-@import './partials/variables';
-@import './partials/globals';
-@import './partials/carousel';
-@import './partials/loader';
-@import './partials/about';
-@import './partials/navigation';
-@import './partials/featured';
-@import './partials/introduction';
-@import './partials/footer';
-@import './partials/blogs';
-@import './partials/post';
+@import "./partials/variables";
+@import "./partials/globals";
+@import "./partials/carousel";
+@import "./partials/loader";
+@import "./partials/about";
+@import "./partials/navigation";
+@import "./partials/featured";
+@import "./partials/introduction";
+@import "./partials/footer";
+@import "./partials/blogs";
+@import "./partials/post";
