--- a/src/partials/_blogs.scss
+++ b/src/partials/_blogs.scss
@@ -11,11 +11,11 @@
     background-position: 50% 80%;
     filter: grayscale(50%);
 
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     text-align: center;
 
     h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: "Playfair Display", serif;
         font-size: 4.5em;
         line-height: 1.1;
         color: $white;
@@ -71,7 +71,7 @@
     filter: grayscale(70%);
     filter: brightness(0.4);
 
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     text-align: center;
 }
 
@@ -84,7 +84,7 @@
     height: fit-content;
     // background-color: $white;
 
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     color: $background;
 
     h4 {
@@ -92,7 +92,7 @@
     }
 
     h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: "Playfair Display", serif;
         font-size: calc(38px + (78 - 38) * ((100vw - 270px) / (1600 - 270)));
         line-height: 1.1;
         margin-bottom: 10px;
@@ -133,7 +133,7 @@
 
     .sectionTitle {
     color: $background;
-    font-family: 'Source Code Pro', monospace;
+    font-family: "Source Code Pro", monospace;
     font-size: 2em;
     font-weight: 300;
     text-align: left;
@@ -143,7 +143,7 @@
         &:first-letter {
             font-size: 1.5em;
             font-weight: 700;
-            font-family: 'Playfair Display', serif;
+            font-family: "Playfair Display", serif;
             color: $primaryColor;
         }
     }
