--- a/src/partials/_carousel.scss
+++ b/src/partials/_carousel.scss
@@ -41,7 +41,7 @@
     text-align: center;
 
     h2 {
-        font-family: 'Playfair Display', serif;
+        font-family: "Playfair Display", serif;
         font-size: 4.5em;
         line-height: 1.1;
         color: $white;
@@ -54,7 +54,7 @@
     }
 
     p {
-        font-family: 'Source Code Pro', monospace;
+        font-family: "Source Code Pro", monospace;
         font-size: 1em;
         color: #fff;
         text-shadow: 0 1px 2px rgba(0,0,0,0.8);
