putting color: white evrywhere fucked stuff up

--- a/src/partials/_navigation.scss
+++ b/src/partials/_navigation.scss
@@ -42,7 +42,7 @@
   } 
   
 .wordmark {
-  color: rgba(255,255,255,0.1); 
+  color: rgba(255,255,255,0.1) !important; 
   font-family: "Playfair Display", serif;
   font-weight: 700;
   font-size: 24vw;
