put $white where it needs to be

--- a/src/partials/_post.scss
+++ b/src/partials/_post.scss
@@ -9,6 +9,7 @@
     background-size: cover;
 
     font-family: "Source Code Pro", monospace;
+    color: $white;
     text-shadow: 0 3px 5px rgba(0,0,0,0.5);
 
     h2 {
