--- a/src/partials/_blogs.scss
+++ b/src/partials/_blogs.scss
@@ -2,14 +2,14 @@
 .blogWrap {
     height: 70vh;
     width: 100vw;
-    padding: 100px 20px 0px 20px;
+    padding: 80px 20px 0px 20px;
 
 
-    background-image: linear-gradient(180deg, rgba(18,18,26,0.2) 0%, rgba(18,18,26,1) 84%), url(../assets/Us/us-and-rainbow.JPEG);
+    background-image: linear-gradient(180deg, rgba(18,18,26,0.2) 0%, rgba(18,18,26,1) 84%), url(../assets/blogsPage/black-water.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% 80%;
-    filter: grayscale(50%);
+    // background-position: 50% 80%;
+    // filter: grayscale(50%);
 
     font-family: "Source Code Pro", monospace;
     text-align: center;
@@ -43,6 +43,7 @@
         background: linear-gradient(
                         90deg,
                         var(--color-one),
+                        var(--color-two),
                         var(--color-two),
                         var(--color-one)
                     ) 0 0 / var(--bg-size) 100%;
@@ -111,6 +112,7 @@
                         90deg,
                         var(--color-one),
                         var(--color-two),
+                        var(--color-two),
                         var(--color-one)
                     ) 0 0 / var(--bg-size) 100%;
         color: transparent;
@@ -161,6 +163,7 @@
     }
 
     .sinkSection {
+        text-align: center;
         font-size: calc(22px + (32 - 22) * ((100vw - 270px) / (1600 - 270)));
         line-height: 1.1;
         font-weight: 700;
