first changes from home computer

--- a/src/partials/_blogs.scss
+++ b/src/partials/_blogs.scss
@@ -5,7 +5,7 @@
     padding: 80px 20px 0px 20px;
 
 
-    background-image: linear-gradient(180deg, rgba(18,18,26,0.2) 0%, rgba(18,18,26,1) 84%), url(../assets/blogsPage/black-water.jpg);
+    background-image: linear-gradient(180deg, rgba(18,18,26,0.2) 0%, rgba(18,18,26,1) 84%), url(../assets/blogsPage/black-foliage.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     // background-position: 50% 80%;
@@ -107,7 +107,7 @@
 
         --bg-size: 400%;
         --color-one: #FF2173;
-        --color-two: #fff;
+        --color-two: rgba(18, 18, 26,1);
         background: linear-gradient(
                         90deg,
                         var(--color-one),
@@ -164,8 +164,12 @@
 
     .sinkSection {
         text-align: center;
-        font-size: calc(22px + (32 - 22) * ((100vw - 270px) / (1600 - 270)));
+        font-family: "Source Code Pro", monospace;
+        font-size: 1.5em;
         line-height: 1.1;
-        font-weight: 700;
+    }
+
+    .sinks {
+        color: $primaryColor;
     }
 }
