--- a/src/partials/_carousel.scss
+++ b/src/partials/_carousel.scss
@@ -46,7 +46,7 @@
         line-height: 1.1;
         color: $white;
         margin-bottom: 10px;
-        text-shadow: 0 3px 5px rgba(0,0,0,0.8);
+        text-shadow: 4px 4px 6px rgba(0,0,0,1);
 
         @media (max-width: $breakPoint) {
             font-size: 2.5em;
@@ -56,8 +56,8 @@
     p {
         font-family: "Source Code Pro", monospace;
         font-size: 1em;
-        color: #fff;
-        text-shadow: 0 1px 2px rgba(0,0,0,0.8);
+        color: $white;
+        text-shadow: 1px 1px 5px rgba(0,0,0,1);
     }
 
     .btn {
