--- a/src/partials/_blogs.scss
+++ b/src/partials/_blogs.scss
@@ -98,6 +98,7 @@
         line-height: 1.1;
         margin-bottom: 10px;
         text-align: center;
+        text-shadow: 1px 1px rgba(0,0,0,0);
     }
 
     .sinkEmphasis {
@@ -141,6 +142,7 @@
     text-align: left;
     line-height: 1.1;
     margin-bottom: 10px;
+    text-shadow: 0 3px 5px rgba(0,0,0,0);
 
         &:first-letter {
             font-size: 1.5em;
