--- a/src/partials/_blogs.scss
+++ b/src/partials/_blogs.scss
@@ -59,6 +59,13 @@
       }
 }
 
+//Search Blog
+.titleHelp {
+    h2 {
+        color:rgba(18, 18, 26,1);
+    }
+}
+
 //Expanded Blog Landing Page
 .blogImg {
     height: 50vh;
