--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,5 +1,5 @@
 $breakPoint: 991px;
-$background: rgba(18, 18, 26,1);
+$background: rgb(26, 18, 26);
 $white: #fff;
 $transparentWhite: rgba(255,255,255,0.7);
 $textColor: #fff;
