--- a/src/partials/_blogs.scss
+++ b/src/partials/_blogs.scss
@@ -62,7 +62,25 @@
 //Search Blog
 .titleHelp {
     h2 {
-        color:rgba(18, 18, 26,1);
+        font-family: "Source Code Pro", monospace;
+        text-align: left;
+        font-size: 4.5em;
+        line-height: 1.1;
+        color: $white;
+        margin-bottom: 10px;
+        text-shadow: 0 3px 5px rgba(0,0,0,0.5);
+
+        @media (max-width: $breakPoint) {
+            font-size: 2.5em;
+        }
+    }
+    p {
+        text-align: left;
+    }
+    .blogExpandedContainer {
+        h2 {
+            color: rgba(18, 18, 26,1);           
+        }
     }
 }
 
