--- a/src/partials/_featured.scss
+++ b/src/partials/_featured.scss
@@ -45,28 +45,9 @@
     }
 }
 
-.spezia {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/spezia-food.jpeg); 
-    background-size: cover; 
-    background-position: center; 
-    
-    .foodImg {
-        height: 50vh;
-
-        background-image: url(../assets/FeaturedImages/spezia-location.jpeg); 
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-
-    &:hover {
-        .whitebtn{
-            background-color: $background;
-            border: 1px solid $background;
-            letter-spacing: 4px;
-        }
+.featured {
+    .postSquare {
+        height: 100% !important;
     }
 }
 
