fixed default blue to pink, made api featured blog

--- a/src/partials/_about.scss
+++ b/src/partials/_about.scss
@@ -23,6 +23,10 @@
                 position: relative;
             }
 
+            .aboutText {
+                font-family: "Source Code Pro", monospace;
+            }
+
             .imgWrap {
                 width: 100%;
                 height: 100%;
