--- a/src/partials/_carousel.scss
+++ b/src/partials/_carousel.scss
@@ -1,6 +1,9 @@
 .carousel {
     position: relative;
     z-index: 0;
+    .swiper-pagination-bullet-active {
+        background: $white;
+    }
 }
 
 .slideWrap {
