--- a/src/partials/_introduction.scss
+++ b/src/partials/_introduction.scss
@@ -9,7 +9,7 @@
 }
 
 .introTitle {
-    color: $textColor;
+    color: $white;
     font-size: calc(34px + (58 - 34) * ((100vw - 270px) / (1600 - 270)));
     font-weight: 300;
     line-height: 1.1;
