--- a/src/partials/_featured.scss
+++ b/src/partials/_featured.scss
@@ -3,132 +3,24 @@
     font-family: "Source Code Pro", monospace;
     background-color: rgba(18, 18, 26,1);
 
-    h2 {
-        font-size: calc(14px + (18 - 14) * ((100vw - 270px) / (1600 - 270)));
+    h3 {
+        font-size: calc(14px + (18 - 14) * ((100vw - 270px) / (1600 - 270))) !important;
         font-weight: 700;
         text-shadow: 0 3px 5px rgba(0,0,0,0.5);
         text-align: center;
     }
 }
 
-.squareContainer {
-    width: 100%;
-    height: 40vh;
-}
-
-.squareContainerV {
-    width: 100%;
-}
-
-.sakuraBana {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/sakura-bana-food-v2.jpeg); 
-    background-size: cover; 
-    background-position: center;
-
-    .foodImg {
-        height: 50vh;
-
-        background-image: url(../assets/FeaturedImages/sakura-bana-food.jpeg); 
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-
-    &:hover {
-        .whitebtn{
-            background-color: $background;
-            border: 1px solid $background;
-            letter-spacing: 4px;
-        }
-    }
-}
-
 .featured {
     .postSquare {
         height: 100% !important;
-    }
-}
-
-.whiteMulberries {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/mulberries-outside.png); 
-    background-size: cover; 
-    background-position: center;  
-    
-    @media (max-width: 30em) {
-        background-image: linear-gradient(180deg, rgba(0,0,0,0.5) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/mulberries-outside.png); 
-    }
-
-    .foodImg {
-        height: 50vh;
-
-        background-image: url(../assets/FeaturedImages/mulberries-food.png); 
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-
-    &:hover {
-        .whitebtn{
-            background-color: $background;
-            border: 1px solid $background;
-            letter-spacing: 4px;
+        .squareContent {
+            background-image: linear-gradient(180deg, rgba(18,18,26,0) 30%, rgba(18,18,26,0.7) 94%);
         }
     }
 }
 
-.pinthouseBrewing {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/pinthouse-brewing.jpg); 
-    background-size: cover; 
-    background-position: center; 
-    
-    @media (max-width: 30em) {
-        background-image: linear-gradient(180deg, rgba(0,0,0,0.5) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/pinthouse-brewing.jpg); 
-    }
-
-    .foodImg {
-        height: 50vh;
-
-        background-image: url(../assets/FeaturedImages/food_PinthousePizza4.jpg); 
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-
-    &:hover {
-        .whitebtn{
-            background-color: $background;
-            border: 1px solid $background;
-            letter-spacing: 4px;
-        }
-    }
-}
-
-.blueSushi {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/blue-location.jpg); 
-    background-size: cover; 
-    background-position: center;  
-    
-    @media (max-width: $breakPoint) {
-        background-image: linear-gradient(180deg, rgba(0,0,0,0.5) 43%, rgba(0,0,0,0.5) 80%), url(../assets/FeaturedImages/blue-location.jpg); 
-    }
-
-    .foodImg {
-        height: 50vh;
-
-        background-image: url(../assets/FeaturedImages/blue-food.jpeg); 
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-
+.featuredBlogSqr {
     &:hover {
         .whitebtn{
             background-color: $background;
@@ -159,12 +51,6 @@
         text-transform: uppercase;
         letter-spacing: 2px;
         transition: 0.5s;
-    
-        // &:hover {
-        //     background-color: $background;
-        //     border: 1px solid $background;
-        //     letter-spacing: 4px;
-        // }
     }
 
     .redbtn {
