--- a/src/partials/_globals.scss
+++ b/src/partials/_globals.scss
@@ -34,7 +34,7 @@ section {
 }
 
 .titleText {
-    color: $textColor;
+    color: $white;
     font-size: 2em;
     font-weight: 300;
     line-height: 1.1;
@@ -53,7 +53,7 @@ section {
 }
 
 p {
-    color: $textColor;
+    color: $white;
     margin-bottom: 15px;
 
     &:last-of-type {
